___learning/phase-3/phase_3.3/application/istio-manifests/traffic-management/frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: application
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
# Using a different PORT. Istio fails and says it's not exposed by the current workload.
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
